[gd_scene load_steps=11 format=3 uid="uid://cumkwsnn0o4d1"]

[ext_resource type="Theme" uid="uid://detsu6arwhhvh" path="res://assets/mainTheme.tres" id="1_1bl72"]
[ext_resource type="Script" path="res://interfaceScenes/gameHUD.gd" id="1_utb1h"]
[ext_resource type="Texture2D" uid="uid://de2ilm70ukkx4" path="res://assets/textureHealth.tres" id="2_3x3x7"]
[ext_resource type="Script" path="res://interfaceScenes/towerBuildButton.gd" id="5_h8wfr"]
[ext_resource type="Texture2D" uid="uid://cfqiceskhvumo" path="res://assets/basicTowerHead.svg" id="5_yvtse"]
[ext_resource type="PackedScene" uid="uid://boefrkplkw5pq" path="res://towers/shooter/Shooter.tscn" id="6_6esoi"]
[ext_resource type="PackedScene" uid="uid://bfqj2kp3inkh8" path="res://enemy/plasmidEditor.tscn" id="7_0nnfq"]
[ext_resource type="PackedScene" uid="uid://wye3ifl6ak8u" path="res://interfaceScenes/debug_level_editors.tscn" id="8_o6rqm"]

[sub_resource type="InputEventKey" id="InputEventKey_c2qyx"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_yyl1v"]
events = [SubResource("InputEventKey_c2qyx")]

[node name="HUD" type="Node2D"]
script = ExtResource("1_utb1h")

[node name="StartWaveButton" type="Button" parent="."]
offset_left = 1536.0
offset_top = 896.0
offset_right = 1856.0
offset_bottom = 1024.0
theme = ExtResource("1_1bl72")
text = "Start Wave"

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = 1152.0
offset_top = 64.0
offset_right = 1792.0
offset_bottom = 128.0
value = 75.0
nine_patch_stretch = true
texture_progress = ExtResource("2_3x3x7")

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 640.0
offset_right = 744.0
offset_bottom = 64.0
theme = ExtResource("1_1bl72")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLable" type="Label" parent="."]
offset_left = 1664.0
offset_top = 192.0
offset_right = 1856.0
offset_bottom = 256.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShooterButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 906.0
offset_right = 182.0
offset_bottom = 1024.0
icon = ExtResource("5_yvtse")
icon_alignment = 1
expand_icon = true
script = ExtResource("5_h8wfr")
tower = ExtResource("6_6esoi")

[node name="Bsp_ Button_sec_ Tower" type="Button" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 704.0
offset_right = 192.0
offset_bottom = 832.0
script = ExtResource("5_h8wfr")
tower = ExtResource("6_6esoi")

[node name="ExitLevelButton" type="Button" parent="."]
offset_left = 32.0
offset_top = 32.0
offset_right = 96.0
offset_bottom = 96.0
shortcut = SubResource("Shortcut_yyl1v")
text = "ESC"

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 1664.0
offset_top = 256.0
offset_right = 1856.0
offset_bottom = 320.0

[node name="Debug Editors" type="Node" parent="."]

[node name="PlasmidEditor" parent="Debug Editors" instance=ExtResource("7_0nnfq")]
position = Vector2(256, 816)

[node name="LevelEditors" parent="Debug Editors" instance=ExtResource("8_o6rqm")]
offset_left = 1616.0
offset_top = 320.0
offset_right = 1888.0
offset_bottom = 351.0
